--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-03 06:36:10
+lastsearch = 2024-08-03 16:19:15
 
 [thamaulac.com.vn]
 match = -22.2%%
@@ -17,9 +17,9 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamvinhthuan.com]
-match = 16.7%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 0.0%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [trieuchau.com]
 match = -5.6%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [vatlieulotsan.com]
-match = -27.8%%
-title = Thảm Xốp 60 × 60 Cm Một Màu Vân Caro
-url = https://vatlieulotsan.com/tham-xop-60-x-60-cm-mot-mau-van-caro/
+match = -83.3%%
+title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
+url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [thamtuonglam.vn]
 match = 21.4%%
@@ -67,8 +67,8 @@ title = Thảm xốp cho bé hình cỏ (60 x 60cm x 9mm)
 url = https://thamtretho.com/tham-co
 
 [www.pinterest.com]
-match = -161.1%%
-title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ | 10 things
+match = -94.4%%
+title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
 url = https://www.pinterest.com/pin/763993524284509692/
 
 [www.facebook.com]
