--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-03 11:34:32
+lastsearch = 2024-08-03 16:23:27
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,9 +27,9 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Discovery of a novel third-generation EGFR inhibitor and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
+match = -194.1%%
+title = Essential role of the voltage-dependent anion channel ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2913247/
 
 [books.google.com]
 match = -11.8%%
@@ -330,4 +330,9 @@ url = https://tamanhhospital.vn/lay-mau-got-chan/
 match = -158.8%%
 title = Tiểu đoàn Căn cứ Sân bay Nà Sản khắc phục khó khăn ...
 url = https://phongkhongkhongquan.vn/28375/tieu-doan-can-cu-san-bay-na-san-khac-phuc-kho-khan-tang-gia-chan-nuoi-tot.html
+
+[www.bernama.com]
+match = 0.0%%
+title = 
+url = https://www.bernama.com/en/news.php?id=2290107
 
