--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-03 15:44:30
+lastsearch = 2024-08-03 16:21:18
 
 [www.zillow.com]
 match = -69.2%%
@@ -107,9 +107,9 @@ title = Regal Hollywood @ North I-85 Movie Tickets and ...
 url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
-match = -192.3%%
-title = Spalding County Sheriff's Office | Griffin GA
-url = https://www.facebook.com/spaldingsheriff/
+match = -69.2%%
+title = Senoia Police Department, GA
+url = https://www.facebook.com/senoiapolice/
 
 [www.bpas.org]
 match = -184.6%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/
+url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOorFbdIWUw4WIyNrwDFTLlcUm_ujQIVVc_I4haTHgH9776_Y5ztF
 
 [www.njcaa.org]
 match = -140.0%%
