--- a/images/ruot-goi-ke-korea-45x65/config.ini
+++ b/images/ruot-goi-ke-korea-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea-45x65.html
 lastopen = 2024-08-02 00:29:53
 
 [search]
-lastsearch = 2024-08-03 14:28:43
+lastsearch = 2024-08-03 16:24:48
 
 [demxanh.com]
 match = -47.8%%
 title = Ruột gối Olympia khuyến mãi giá rẻ nhất thị trường
-url = https://demxanh.com/ruot-goi-olympia.html
+url = https://demxanh.com/ruot-goi-olympia.html?srsltid=AfmBOoqq3DjGNXDqIESaw-pbZFohIadlknHqYYVQtH9zi9gNWnnTO5RS
 
 [sieuthidemonline.vn]
 match = -17.4%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/RUỘT-GỐI-CAO-CẤP-KOREA-ÉP-HƠI-KÍCH-THƯỚC-45*
 [everonvn.com.vn]
 match = -82.6%%
 title = Ruột Gối Chống Ngáy Everon Chính Hãng Hàn Quốc bảng ...
-url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay
+url = https://everonvn.com.vn/everon/76/ruot-goi-chong-ngay?srsltid=AfmBOoqryQ2XWGFVZ1C6ySkvZAZzrSoO6AAaNFXkFWUUfcTn-h3bn5eT
 
 [thegioidemviet.vn]
 match = -21.7%%
@@ -44,7 +44,7 @@ url = https://thegioidemonline.com/ruot-goi-bong.html
 [www.diepxuan.com]
 match = 21.7%%
 title = Điệp Xuân Ruột gối kê Everhome M 45x65
-url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html
+url = https://www.diepxuan.com/ruot-goi-ke-everhome-m-45x65.html?srsltid=AfmBOoo3nd0Z0fCEEwkNo66ahnZUwfvC4OqlVbhaYprGTSIFe9Z3c1_Q
 
 [tiki.vn]
 match = -60.9%%
