--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-03 14:49:08
+lastsearch = 2024-08-03 16:25:51
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -22,9 +22,9 @@ title = North Korea claims it launched 18 missiles at once in ...
 url = https://www.nknews.org/2024/05/north-korea-claims-to-have-launched-18-missiles-at-once-in-major-test/
 
 [www.tiktok.com]
-match = -5.0%%
-title = Charlie Mayor of Kingstown
-url = https://www.tiktok.com/discover/charlie-mayor-of-kingstown
+match = -25.0%%
+title = Mayor of Kingstown Charlie Death
+url = https://www.tiktok.com/discover/mayor-of-kingstown-charlie-death
 
 [www.2id.korea.army.mil]
 match = -25.0%%
@@ -37,14 +37,14 @@ title = Korea vs. Kína döntője lesz az MSI-nek!
 url = https://esport1.hu/news/2018/05/20/esport-aioween-leagueoflegends-riot-games-msi-mid-season-invitational-donto-kingzone-vs-rng
 
 [cryptoslate.com]
-match = 5.0%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = 20.0%%
+title = Recently Added Coins
+url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -105.0%%
-title = Riot Platforms Reports Q2 Loss After Bitcoin Halving
-url = https://cryptonews.com/news/riot-platforms-reports-q2-loss-after-bitcoin-halving.htm
+match = -155.0%%
+title = Tether Reports Record $5.2 Billion Profit in First Half of 2024
+url = https://cryptonews.com/news/tether-reports-record-5-2-billion-profit-in-first-half-of-2024.htm
 
 [www.thespike.gg]
 match = -75.0%%
