--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-03 06:41:44
+lastsearch = 2024-08-03 16:14:24
 
 [shopee.vn]
-match = -30.8%%
-title = ga tham em be
-url = https://shopee.vn/search?keyword=ga-chong-tham-ga-trai-giuong-tham-chong-tham-cho-em-be-16x2m-tang-khau-trang-mau-ngau-nhien/6709027127215517721/2642071820174507179/ 
+match = -76.2%%
+title = thảm trải giường loại 1 giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường loại 1
 
 [www.lazada.vn]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [flexhouse.vn]
-match = -104.8%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
-url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
+match = -42.9%%
+title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
+url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [noithatminhkhoi.com]
 match = -57.1%%
