--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-03 15:44:07
+lastsearch = 2024-08-03 16:29:59
 
 [www.tiktok.com]
-match = -143.8%%
-title = Gloss for life #beautytok #hudabeauty #lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -200.0%%
+title = Why I’m OBSESSED with baking my lip liner #hudabeauty ...
+url = https://www.tiktok.com/@hudabeauty/video/7267971747742371118?lang=en
 
 [digitalmaine.com]
 match = -75.0%%
