CI images update

--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-03 13:19:27
+lastsearch = 2024-08-03 16:31:06
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -12,9 +12,9 @@ title = Bộ ga chun coco 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = -59.1%%
-title = Bộ ga gối nỉ nhung COCO nhập khẩu cao cấp, ga trải ...
-url = https://shopee.vn/Bộ-ga-gối-nỉ-nhung-COCO-nhập-khẩu-cao-cấp-ga-trải-giường-3-món-ga-chun-bọc-đệm-bền-màu-không-bai-dão-KT-1m6-1m8-2m2-i.224201185.14136884439
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
 match = -18.2%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = 27.3%%
-title = Ga gối chun nỉ COCO KHÔNG VIỀN
-url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
+match = -118.2%%
+title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, chăn 4kg cực ...
+url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
 
 [www.instagram.com]
 match = 4.5%%
