--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -122,9 +122,9 @@ title = 8:34 - "I'm really getting into this guy Ren..."
 url = https://www.reddit.com/r/ren/comments/1dg1e29/834_im_really_getting_into_this_guy_ren/
 
 [cca.hawaii.gov]
-match = -300.0%%
-title = Hawaii Administrative Rules Title 16 Chapter 115
-url = https://cca.hawaii.gov/pvl/files/2013/08/har_115-c1.pdf
+match = -120.0%%
+title = chapter 84 massage therapy
+url = https://cca.hawaii.gov/pvl/files/2013/08/har_84-c2.pdf
 
 [www.uscis.gov]
 match = -430.0%%
@@ -305,4 +305,9 @@ url = https://www.legis.iowa.gov/docs/ACO/CourtRulesChapter/9.pdf
 match = -400.0%%
 title = Frequently Asked Questions About Child Support Services
 url = https://www.ncdhhs.gov/divisions/social-services/child-support-services/frequently-asked-questions-about-child-support-services
+
+[oxenfree.fandom.com]
+match = -130.0%%
+title = Ren | Oxenfree Wiki - Fandom
+url = https://oxenfree.fandom.com/wiki/Ren
 
