--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-03 14:11:14
+lastsearch = 2024-08-03 16:44:50
 
 [www.diepxuan.com]
 match = -20.0%%
 title = Chiếu cây HT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOop9KXwbPe4Kkejidja_4DTuvNH50MAnzEfG1dA1kiDdouTV9uJy
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -40.0%%
+title = chiếu trúc tăm HT cao cấp 2mx2.2m
+url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 7W HT Light Level
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -226.7%%
-title = Cho Phép Tôi Được Nói Lỗ Lã Tôi Chịu, Nghe Muốn Rơi Lệ ...
-url = https://www.youtube.com/watch?v=ZXm1szzsxoU
+match = -240.0%%
+title = Mộng Cam tham gia sân chơi biến hình cùng ca khúc "Rực rỡ ...
+url = https://www.youtube.com/watch?v=JtBQKTDx7sU
 
 [dauthau.asia]
 match = -240.0%%
