--- a/images/chieu-nhua-ha-noi-14/config.ini
+++ b/images/chieu-nhua-ha-noi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-14.html
 lastopen = 2024-06-09 22:51:04
 
 [search]
-lastsearch = 2024-08-03 15:36:29
+lastsearch = 2024-08-03 16:36:53
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoouSw44AOMkyy01ECkhLy7jrI9CUSxbxuaiY3vUqDIEKzQp0OAT
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [shopee.vn]
-match = -85.0%%
-title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
-url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
+match = -35.0%%
+title = chiếu nhựa giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu nhựa
 
 [tchome.vn]
 match = 20.0%%
