--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-03 10:53:09
+lastsearch = 2024-08-03 16:40:40
 
 [demre.com.vn]
 match = 61.1%%
@@ -37,9 +37,9 @@ title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = 16.0%%
-title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
-url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
+match = -28.0%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
@@ -65,4 +65,9 @@ url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1
 match = -16.0%%
 title = Chiếu trúc hạt Thái Bình cao cấp 160x200 tại Hà Nội
 url = https://sieuthitretho.vn/chieu-truc-hat-thai-binh-cao-cap-160x200-p498.html
+
+[foreverbedding.net]
+match = -88.0%%
+title = Đệm lò xo Appolo A201 2 Viền (Mẫu 2) - Forever Bedding
+url = https://foreverbedding.net/dem-lo-xo-appolo-a201-2-vien-mau-2
 
