--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-03 11:44:44
+lastsearch = 2024-08-03 16:39:39
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -42,14 +42,14 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
+match = 19.1%%
+title = Everon Quảng Bình Nệm lò xo Everon Pocket 180x200x25
+url = https://www.everonqb.com/nem-lo-xo-everon-pocket-180x200x25.html
 
 [www.diepxuan.com]
-match = 36.2%%
-title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+match = 31.1%%
+title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
+url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
 
 [everon.online]
 match = 31.9%%
@@ -72,7 +72,7 @@ title = kingkoil spray cushion (america) - Korean Pillows & Blankets
 url = https://everonvietnam.com/en/dem-lo-xo-kingkoil-my/
 
 [everonhanquoc.vn]
-match = 33.3%%
-title = Đệm Lò Xo King Koil Công Nghệ Hàng Đầu Tại Mỹ
-url = https://everonhanquoc.vn/1035/dem-lo-xo-king-koil
+match = 19.1%%
+title = Đệm Lò Xo Kingkoil Cloud Pillow Top - Sự Nâng Đỡ Tối Đa
+url = https://everonhanquoc.vn/everon/12714/dem-lo-xo-everon-kingkoil-cloud-pillow-top
 
