--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-10 00:54:35
 lastsearch = 2024-08-03 16:25:51
 
 [en.wikipedia.org]
-match = -12.5%%
-title = Gwangju Uprising
-url = https://en.wikipedia.org/wiki/Gwangju_Uprising
+match = 15.0%%
+title = Timeline of Korean history
+url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
 
 [peacehistory-usfp.org]
 match = -45.0%%
