--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-03 11:31:25
+lastsearch = 2024-08-03 16:37:54
 
 [tuananh.vn]
 match = 22.2%%
@@ -32,9 +32,9 @@ title = Đệm bông ép Tuấn Anh Korea gấm Plus - chăn ga gối
 url = https://entershopping.vn/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [sieuthidemonline.vn]
-match = -24.0%%
-title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
-url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
+match = -84.0%%
+title = Tuấn Anh - công ty sản xuất chăn ga gối đệm hàng đầu Việt ...
+url = https://sieuthidemonline.vn/thuong-hieu/tuan-anh/
 
 [suongtuyet.com]
 match = 16.0%%
