--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-03 06:26:51
+lastsearch = 2024-08-03 16:32:30
 
 [www.lazada.vn]
 match = -46.7%%
 title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/?srsltid=AfmBOoqHjlcG36lptfULnHkBmM2YKmQZugSO9q9GnyuFJZ2nNbInUS0F
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/?srsltid=AfmBOooKoFLqZHVDJEJ3_NYL4c5H6Sf0UbSynrMsVQIagprPeUw8GZhX
 
 [shopee.vn]
 match = 13.3%%
@@ -19,22 +19,22 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOorcUvoW7nYU9Saz3Yp3mmH7sBWJSnwjIiHZ4IeHBkXl9aD2198E
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooccspRd8I10A6Ruk7aiorFPqUI3BcbCD5kTOtzqqkqlNTFgBSE
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOorbx34aFpeWvzd7fyP_x_lZmn9MhYwxtPrHkpl0U5FQLQsDzjtO
+url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOooEsRnR9tmOpUQSvwXVrEQ0QP3TdEuVpn6Ezdm0cIm8x0ZmR6ku
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOooqMx9xbzfkCxHD_CUKqP-uJqO15U8IoUuMoo-FJb6CwenJHmpE
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOooW5zfQzz6P-LnDnhju6Z5u-tItuC_KZBRk6FRREa6LgzBy0_aN
 
 [lepetit.com.vn]
-match = -140.0%%
-title = Vỏ gối vuông sofa nhung gân sọc 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-nhung-gan-soc-45x45-cm
+match = -133.3%%
+title = Vỏ gối vuông sofa in họa tiết 45x45 cm - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-sofa-in-hoa-tiet-45x45-cm
 
 [flexhouse.vn]
 match = -160.0%%
@@ -129,7 +129,7 @@ url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
 [dienmaycholon.com]
 match = -33.3%%
 title = Gối & Vỏ Gối (Có 16 sản phẩm)
-url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi&srsltid=AfmBOopggcqPJMS_ae0ng3J9sA3UUHVelUX0mQeUCXdvx7PWqw1AtHdq
+url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi&srsltid=AfmBOoptZ-l-FnwwJ7Fl9WK-ubhwWHAgIgWtiyr6mkoZ-C8L8NxEMgQn
 
 [phedecor.com]
 match = 6.7%%
