--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 23:53:28
 lastsearch = 2024-08-03 16:31:06
 
 [www.diepxuan.com]
-match = 4.5%%
-title = Bộ ga chun coco 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
+match = -72.7%%
+title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = 13.6%%
