--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-03 12:43:23
+lastsearch = 2024-08-03 16:47:15
 
 [www.facebook.com]
 match = -141.2%%
@@ -52,9 +52,9 @@ title = Publications
 url = https://maogroup.jhu.edu/publications/
 
 [www.youtube.com]
-match = -147.1%%
-title = SUGAR is THE MAIN CULPRIT MAO NG DI KA MAGLOSE ug ...
-url = https://www.youtube.com/watch?v=HQhTun_xQxw
+match = -170.6%%
+title = Tips on how to choose the best durians from a Mao Shan ...
+url = https://www.youtube.com/watch?v=tGyCw9pHXKo
 
 [med.emory.edu]
 match = -129.4%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -152.9%%
-title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
+match = -229.4%%
+title = Indoor tanning early in life is associated with increased risk ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
 
 [books.google.com]
 match = -7.7%%
