--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -27,8 +27,8 @@ title = Coco Lee
 url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
-match = -246.2%%
-title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
+match = -200.0%%
+title = That Mama: Coco Chan, Founder Of Voltage PR ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -42,8 +42,8 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -246.2%%
-title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
+match = -200.0%%
+title = Hong Kong-born Canadian actress Grace Chan ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
