--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-08-03 12:35:56
+lastsearch = 2024-08-03 16:54:11
 
 [shopee.vn]
 match = -126.3%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ không viền màu vàng Size: 1mx1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m/chieu-truc-hat-nho-khong-vien-mau-vang-1mx1m9-94.html
 
 [www.youtube.com]
-match = -131.6%%
-title = MƯA HÈ ♫ Tú Anh - Nhạc Thiếu Nhi Mùa Hè Vui Nhộn Cho ...
-url = https://www.youtube.com/watch?v=ZbNN7ZZ1YOk
+match = -157.9%%
+title = ALIBABA - Bé Tú Anh | Nhạc Thiếu Nhi | Lời Việt: Lê Quốc ...
+url = https://www.youtube.com/watch?v=x-ljTpcenNg
 
 [dochoihoangthu.com]
 match = -121.1%%
