--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-03 12:54:11
+lastsearch = 2024-08-03 16:57:57
 
 [demxanh.com]
 match = -14.8%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOopVOEN0lDxhkhyERHzBRQzbuv-_ZHoVZoo3gQPWyCA_qkq_0nbU
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
 match = 18.5%%
