--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-03 12:32:30
+lastsearch = 2024-08-03 16:58:18
 
 [www.lazada.vn]
 match = -60.9%%
 title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html?srsltid=AfmBOopHsbQkwg13F1O3oBbQyOhsQoY_jTX5wJEcTImAX4MR6vg-5UrR
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [www.facebook.com]
 match = 52.2%%
@@ -22,9 +22,9 @@ title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
 url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = -39.1%%
-title = Chiếu Nhựa Thái Bình-Việt Nam Đa Dạng Kích Cỡ-Mầu Sắc
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Việt-Nam-Đa-Dạng-Kích-Cỡ-Mầu-Sắc-i.674166358.24176394117
+match = -78.3%%
+title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
+url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [trangvangvietnam.com]
 match = 21.7%%
