--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-03 13:25:16
+lastsearch = 2024-08-03 17:00:42
 
 [www.diepxuan.com]
 match = 40.6%%
 title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
+url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html?srsltid=AfmBOopQDy6LgPa_wLdax9IsH__vCojqtkXBvSSk2jQ8eoH_ne1yTDu-
 
 [demxanh.com]
-match = -6.2%%
-title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
-url = https://demxanh.com/dem-bong-ep-dreamland.html
+match = 25.0%%
+title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html?srsltid=AfmBOorHj2KOBA-qRxlgMFWacRMc4IqnU3gbXk88ilieOoo5_nqZIOcu
 
 [changagoidemdep.vn]
 match = -12.5%%
