CI images update

--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-03 14:35:37
+lastsearch = 2024-08-03 17:20:27
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -56.5%%
+title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
+url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
 
 [lombom.com]
 match = -60.9%%
@@ -32,9 +32,9 @@ title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
 
 [chieutrucsaigon.com]
-match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [khodem.vn]
 match = -56.5%%
@@ -52,9 +52,9 @@ title = Địa chỉ bán chiếu trúc Cao Bằng tại 63 tỉnh thành
 url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-cao-bang-tai-63-tinh-thanh/
 
 [www.facebook.com]
-match = 13.0%%
-title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
-url = https://www.facebook.com/chieucaobang/
+match = -73.9%%
+title = Chiếu Trúc Cao Bằng Cao Sơn dòng đối mục loại 1 | ‼️Địa ...
+url = https://www.facebook.com/demhong.vn/videos/chiếu-trúc-cao-bằng-cao-sơn-dòng-đối-mục-loại-1/843056673315667/?locale=de_DE
 
 [chieutruc.info]
 match = -73.9%%
@@ -62,14 +62,14 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [baocaobang.vn]
-match = -13.0%%
-title = Độc đáo các sản phẩm từ trúc Cao Bằng
-url = https://baocaobang.vn/-3524.html
+match = -78.3%%
+title = Thành phố Cao Bằng ngày 14/10 không mưa, nhiệt độ cao ...
+url = https://baocaobang.vn/Thanh-pho-Cao-Bang-ngay-1410-khong-mua-nhiet-do-cao-nhat-28oC-27033.html
 
 [www.youtube.com]
-match = -47.8%%
-title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
-url = https://www.youtube.com/watch?v=sGb4V5EQcww
+match = -126.1%%
+title = Đá lở từ trên núi xuống khiến 2 người thiệt mạng, 3 người bị ...
+url = https://www.youtube.com/watch?v=WDU4s69R1i4
 
 [chieu.com.vn]
 match = -43.5%%
