--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-08-03 16:13:44
+lastsearch = 2024-08-03 17:29:01
 
 [www.diepxuan.com]
 match = 14.3%%
 title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html?srsltid=AfmBOoonC30SOinIMwDgLid85p_PTjwbeE7ZjrEiicRUyAor-ZyTH0ly
+url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -128.6%%
-title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
-url = https://www.youtube.com/watch?v=GzepFXdUfeQ
+match = -33.3%%
+title = TRUNG QUỐC VÀ ĐÀI LOAN KHÁC NHAU RA SAO?
+url = https://www.youtube.com/watch?v=F83JmjfnxJ8
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -230,4 +230,9 @@ url = https://visadulich.com.vn/lam-visa-dai-loan.html
 match = -100.0%%
 title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
+
+[zh.wikipedia.org]
+match = -9.5%%
+title = Đài Bắc – Wikipedia tiếng Việt
+url = https://zh.wikipedia.org/zh-cn/vi:Đài_Bắc
 
