--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-03 16:17:09
+lastsearch = 2024-08-03 17:16:23
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -85.7%%
-title = Bộ ga gối chần bông cao cấp ETAMI cotton Hàn Quốc 100 ...
-url = https://shopee.vn/Bộ-ga-gối-chần-bông-cao-cấp-ETAMI-cotton-Hàn-Quốc-100-Hoa-Nhí-Xanh-Ngọc-gồm-1-ga-chần-chun-2-vỏ-gối-đầu-i.530345658.23830480845
+match = -100.0%%
+title = GA CHUN TRẦN CÓ BÈO PHỦ NGẮN siêu đẹp - Ga gối nỉ ...
+url = https://shopee.vn/Bộ-GA-GỐI-NỈ-NHUNG-TRẦN-BÔNG-GA-NỈ-PHỦ-TRẦN-BÔNG-GA-CHUN-TRẦN-CÓ-BÈO-PHỦ-NGẮN-siêu-đẹp-Ga-gối-nỉ-nhung-cao-cấp-i.11781398.17889810969
 
 [runa.vn]
 match = -4.8%%
