--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-03 13:37:26
+lastsearch = 2024-08-03 17:25:13
 
 [www.instagram.com]
-match = -123.1%%
-title = Chan Dior Sunshade (@chan_dior_sunshade)
-url = https://www.instagram.com/chan_dior_sunshade/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -355,4 +355,9 @@ url = https://www.carousell.com.my/u/justforu.shop/reviews/
 match = -300.0%%
 title = 5 things to know about Hong Kong's richest woman, Kimbie ...
 url = https://www.herworld.com/pov/people/things-know-about-hong-kongs-richest-woman-kimbie-chan-hoi-wan
+
+[www.bloomberg.com]
+match = 0.0%%
+title = 
+url = https://www.bloomberg.com/news/articles/2024-07-24/south-korea-s-dior-bag-scandal-why-uproar-over-first-lady-shook-politics
 
