--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-03 14:39:43
+lastsearch = 2024-08-03 17:17:05
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -126.7%%
-title = Ways Station Gaming - "Nghiêng nước ...
-url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
+match = -13.3%%
+title = Grand Loyal Poker Club
+url = https://www.facebook.com/GrandLoyal/photos/a.1866258850288339/1998924753688414/?type=3
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -72,9 +72,9 @@ title = Tổng hợp 12 mạch điện điều khiển động cơ cơ bản
 url = https://www.thietbidiencongnghiep.com.vn/bai-viet/tong-hop-12-mach-dieu-khien-co-ban/
 
 [geniustools.vn]
-match = -66.7%%
-title = Đầu lắc léo 3/8" hệ inch 12 cạnh
-url = http://geniustools.vn/khau-564/dau-lac-leo-3-8-he-inch-12-canh-757
+match = -186.7%%
+title = Khẩu, tuýp 1/4 đầu lắc léo hệ mét 12 cạnh hãng Genius
+url = http://geniustools.vn/khau-560/dau-lac-leo-1-4-he-met-12-canh-682
 
 [dochoimamnon123.com]
 match = -113.3%%
