--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-03 13:18:07
+lastsearch = 2024-08-03 17:20:06
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -27,14 +27,14 @@ title = Chiếu Nằm (Chiếu Tre, Chiếu Trúc, Chiếu Cói,..)
 url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-truc-chieu-coi,..).html
 
 [www.facebook.com]
-match = 22.2%%
-title = CHIẾU TRE TRÚC HCM
-url = https://www.facebook.com/chieutructot/?locale=vi_VN
+match = 25.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
