--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-03 16:40:59
+lastsearch = 2024-08-03 17:26:58
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -42,9 +42,9 @@ title = Chiếu tre - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu tre
 
 [www.youtube.com]
-match = -78.3%%
-title = Người chăn nuôi trắng tay vì dịch tả lợn châu Phi | VTC16
-url = https://www.youtube.com/watch?v=QHfSbbtftf0
+match = -108.7%%
+title = Biểu tình bạo lực tiếp tục lan rộng tại Anh sau vụ tấn công ...
+url = https://www.youtube.com/watch?v=_YEPiM8axCg
 
 [hcmcpv.org.vn]
 match = -91.3%%
