--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-03 16:39:16
+lastsearch = 2024-08-03 17:14:00
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOor1eRyJHy-Pam93_f_ViBNriAO0D2ktsYBs6KUn7eBNRcBSfHcF
 
 [www.facebook.com]
 match = -77.8%%
@@ -54,7 +54,7 @@ url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoqDLB_O1YqDGVY97zsJzwURHazFq9KPpZ3PW7PgZ_0BroNYi26a
 
 [m.facebook.com]
 match = -122.2%%
