--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-03 14:30:27
+lastsearch = 2024-08-03 17:22:49
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -655,4 +655,9 @@ url = https://www.cnn.com/
 match = -82.6%%
 title = Japan Weekly Mail - Page 194 - Google Books Result
 url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+15+19&source=bl&ots=_sobLNN5kv&sig=ACfU3U2f0WG8RoRBCSVMlZHUbwgAj5nHqQ&hl=en&sa=X&ved=2ahUKEwiO0M60pNeHAxXtFVkFHREkAJQQ6AF6BAgdEAM
+
+[www.yelp.com]
+match = -73.9%%
+title = Oc Cay Dua - 1924 Aborn Rd, San Jose, California
+url = https://www.yelp.com/biz/oc-cay-dua-san-jose-6
 
