CI images update

--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-03 12:43:44
+lastsearch = 2024-08-03 17:49:22
 
 [ninhouse.vn]
 match = -161.5%%
@@ -175,4 +175,9 @@ url = https://demolympia.com/chan-ga-goi-khach-san-olympia-cotton-lua-7-mon-mau-
 match = -16.7%%
 title = Vỏ Gối
 url = https://aeoneshop.com/products/category/137/goi---vo-goi
+
+[tanmydesign.com]
+match = -100.0%%
+title = 15+ Mẫu Vỏ gối thêu tay đẹp - Hà Nội
+url = https://tanmydesign.com/vo-goi/
 
