--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-03 16:13:06
+lastsearch = 2024-08-03 17:45:33
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html?srsltid=AfmBOopChxvQXkduxdcG6jFACmbWsYf1yL9iYZLqYrHJAgYUi5GvnBDV
 
 [leflair.com]
 match = 6.9%%
 title = Bộ Chiếu Cao Su Điều Hòa Mix 180x200 (3 Món)...
-url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379
+url = https://leflair.com/shop/delete-bo-chieu-cao-su-ieu-hoa-mix-180x200-3-mon-16379?srsltid=AfmBOookiIcWVRFbSw2MstWWZVlVTieGLeBL83RkS3I4HF76h-jvD8bG
 
 [www.lazada.vn]
 match = -17.2%%
 title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOooOeXKuv6-_F1RKGewLSMVks_3i4lcrNRCRbvNTZMXN060a3XBo
 
 [tiki.vn]
 match = 20.7%%
@@ -59,7 +59,7 @@ url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 [www.diepxuan.com]
 match = 31.0%%
 title = Chiếu điều hòa caosu non 2D 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html
+url = https://www.diepxuan.com/chieu-dieu-hoa-caosu-non-2d-180x200.html?srsltid=AfmBOoqgxyvlGQ-Z073aIPJZyrKAiMBx5K_DLXyWachKnO6PyPLN93xv
 
 [chiaki.vn]
 match = 10.3%%
