--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-03 16:44:54
+lastsearch = 2024-08-03 17:46:36
 
 [en.wikipedia.org]
 match = 0.0%%
-title = 
-url = https://en.wikipedia.org/wiki/Park_Chung_Hee
+title = March First Movement
+url = https://en.wikipedia.org/wiki/March_First_Movement
 
 [www.britannica.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Putin says Russia and North Korea will help each other if ...
 url = https://www.cnn.com/2024/06/19/asia/north-korea-russia-putin-visit-thursday-intl-hnk/index.html
 
 [cryptoslate.com]
-match = -17.4%%
-title = Highest Volume Cryptocurrencies
-url = https://cryptoslate.com/highest-volume/
+match = 8.7%%
+title = Cryptocurrency Rankings
+url = https://cryptoslate.com/coins/
 
 [www.irs.gov]
 match = -78.3%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Sterling Virginia Halal Food
-url = https://www.tiktok.com/discover/sterling-virginia-halal-food
+match = -17.4%%
+title = Olympics Russian Gay Commercial
+url = https://www.tiktok.com/discover/olympics-russian-gay-commercial
 
 [www.unikorea.go.kr]
 match = -113.0%%
