--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-08-03 14:57:21
+lastsearch = 2024-08-03 17:46:56
 
 [demxanh.com]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
 url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
-match = -73.9%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html
+match = -56.5%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 33
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-33-p38118982.html
 
 [thegioidemviet.vn]
-match = -104.3%%
-title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
-url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
+match = -65.2%%
+title = Thảm trải sàn Bali M6 hàng cao cấp, mẫu mã đa dạng
+url = https://thegioidemviet.vn/tham-trai-san-bali-m6/
 
 [www.diepxuan.com]
 match = 100.0%%
