--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-08-03 16:52:47
+lastsearch = 2024-08-03 19:00:19
 
 [demxanh.com]
-match = 28.0%%
-title = Chăn ga gối Singapore lụa
-url = https://demxanh.com/chan-ga-goi-singapore-lua.html
+match = 13.8%%
+title = Chăn ga gối Singapore Pyeoda Luxury 5 món
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeo
 [thegioidemonline.com]
 match = 34.5%%
 title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOoquLJOB87l5bLMD7-qPvLOUMbE6VtiEOg0memRqGH7Fzs_W1bVd
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
 
 [dem4mua.vn]
 match = 6.9%%
