--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-03 10:19:44
+lastsearch = 2024-08-03 18:55:46
 
 [changagoidemsonghong.com]
-match = 22.2%%
-title = Chăn ga gối 100%% cotton mã mầu BC22-060
-url = https://changagoidemsonghong.com/chan-ga-goi-bc60
+match = -40.7%%
+title = Chăn ga gối đệm cưới thiết kế sản xuất by Sông Hồng ...
+url = https://changagoidemsonghong.com/chan-ga-goi-dem-cuoi
 
 [demhong.vn]
 match = 11.1%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -25.9%%
-title = Mua Chăn Ga Gối Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
@@ -162,9 +162,9 @@ title = bộ cotton living - Hệ thống siêu thị chăn ga gối nệm
 url = https://khodemgiagoc.com/bo-cotton-living
 
 [changagoidemphuongbac.com]
-match = 7.4%%
-title = Bộ chăn ga gối cao cấp Sông Hồng Urban UC24-102
-url = https://changagoidemphuongbac.com/bo-chan-ga-goi-cao-cap-song-hong-urban-uc24-102/
+match = 3.7%%
+title = Bộ chăn ga gối Sông Hồng cao cấp Urban UC24-105
+url = https://changagoidemphuongbac.com/bo-chan-ga-goi-song-hong-cao-cap-urban-uc24-105/
 
 [lizd.vn]
 match = 16.7%%
@@ -195,4 +195,9 @@ url = https://mym.com.vn/bo-drap-goi-cotton-mau-16
 match = 37.0%%
 title = Bộ chăn ga gối cotton lụa cao cấp LTT16
 url = https://demvip.vn/products/bo-chan-ga-goi-cotton-lua-cao-cap-ltt16
+
+[nangstore.vn]
+match = -25.9%%
+title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Store
+url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
