--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-03 14:25:37
+lastsearch = 2024-08-03 18:47:50
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -4.3%%
 title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOooUrQG83uB45Yf-0VIg1RbenRyHNbEoQFx9eliswUGRcfR5OzTY
 
 [tiki.vn]
 match = 29.4%%
@@ -83,8 +83,8 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
 
 [demxanh.com]
 match = -2.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 10
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-10.html?srsltid=AfmBOoo80KbCMYXTTor9qpO2_Ax5PhVu9ukdocRyTD8QWMWcSyAkhUFn
 
 [antbedding.com]
 match = 26.5%%
