--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-03 16:23:27
+lastsearch = 2024-08-03 18:55:01
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -27,14 +27,14 @@ title = QSC K12.2 premium powered, 12-inch, two-way loudspeaker
 url = https://www.qsc.com/solutions-products/loudspeakers/portable/powered/portable-pa/k2-series/k122/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Essential role of the voltage-dependent anion channel ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2913247/
+match = -200.0%%
+title = Discovery of a novel third-generation EGFR inhibitor and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWJM3s4c&sig=ACfU3U3Ov7C8CBtEuWWW9l6JIqV3ySd0BQ&hl=en&sa=X&ved=2ahUKEwjE_Iev_9eHAxWWGFkFHWZsBEEQ6AF6BAg0EAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWJP0nZa&sig=ACfU3U3M9fcC0-pUN98ssst6nl5HEPkiaA&hl=en&sa=X&ved=2ahUKEwiT8Ivp4diHAxWnHkQIHaSBM1kQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
