--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-03 15:33:02
+lastsearch = 2024-08-03 18:59:35
 
 [phana.com.vn]
 match = -90.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Giường & khung giường màu xám tại Kasson, ...
+url = https://www.facebook.com/marketplace/112065005476018/gray-bed-frames/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/monthly/?gid=1561485&mn=7&language=english&country=vietnam
 
 [www.booking.com]
-match = -327.3%%
-title = Country Inn & Suites by Radisson, Mankato Hotel and ...
-url = https://www.booking.com/hotel/us/country-inn-mankato.vi.html
+match = -290.9%%
+title = Country Inn & Suites by Radisson, Albertville, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
 
 [www.agoda.com]
 match = -263.6%%
@@ -165,4 +165,9 @@ url = https://vn.trip.com/hotels/stillwater-1-hotel-detail-2885985/comfort-inn-a
 match = -245.5%%
 title = giường liền tủ nhựa cứng ecoplast cao cấp gec30
 url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30/
+
+[www.tripadvisor.com]
+match = -172.7%%
+title = Thai Hoa Riverside Hotel - Vietnam
+url = https://www.tripadvisor.com/Hotel_Review-g15017900-d13814019-Reviews-Thai_Hoa_Riverside_Hotel-Thai_Hoa_Nghe_An_Province.html
 
