--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-03 16:24:28
+lastsearch = 2024-08-03 18:57:08
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -44.0%%
 title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOoqsJgkmnSBAydnI4j3H0u1qK280RKFlt-4-fxNgw5h9CDTWhKuc
 
 [khodem.vn]
 match = 8.0%%
@@ -114,7 +114,7 @@ url = https://demeverhome.com/san-pham/ruot-goi/
 [thegioidemonline.com]
 match = 4.0%%
 title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html
+url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html?srsltid=AfmBOop3P3Gdtf_XlcbUtB9aDS2-CbFKRDV-sug_S7iJMWbVU8IYEQN0
 
 [thegioidemdep.com]
 match = -24.0%%
