--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-03 16:22:00
+lastsearch = 2024-08-03 18:54:40
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html
+url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOop5wGIcYtBkfUhjSsIAjppLSdJabDNUCUjM5SXyUaVzcS89R_mm
 
 [www.noithatpassion.com]
 match = -52.2%%
