CI images update

--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-08-03 18:50:56
+lastsearch = 2024-08-03 19:54:48
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -62,9 +62,9 @@ title = Hanoi ZIP code - The most updated Hanoi postal codes
 url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-postal-codes-1014.html
 
 [www.instagram.com]
-match = -273.3%%
-title = Vesta Lifestyle & Gifts | [English below] Con nít nào chẳng ...
-url = https://www.instagram.com/p/CF9l4oBpowL/
+match = -44.4%%
+title = Instagram
+url = https://www.instagram.com/vesta.lifestyle/p/CuzUDgvPDV-/
 
 [xuongdochoi.com]
 match = -86.7%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -126.7%%
+title = Tuổi trẻ Đà Nẵng adicionou uma foto nova.
+url = https://www.facebook.com/photo.php?fbid=470885098406144&id=100064539736066&set=a.457776343050353&locale=pt_PT
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
