--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-03 10:23:56
+lastsearch = 2024-08-03 19:58:57
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -38.1%%
 title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EkLM0rd&sig=ACfU3U3KCyJUs9KkTC0s2uBzL4OJ9effqg&hl=en&sa=X&ved=2ahUKEwj7w_nK79eHAxVNEkQIHTdCB9AQ6AF6BAgcEAM
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EkOQ5re&sig=ACfU3U24kqRlE4JCF5GCfZfz1oRXcMva6g&hl=en&sa=X&ved=2ahUKEwjt6Y-O8NiHAxVdEVkFHdP0IuQQ6AF6BAgeEAM
 
 [www.diepxuan.com]
 match = -81.0%%
