--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-03 18:46:44
+lastsearch = 2024-08-03 20:03:23
 
 [demtot.com]
 match = 26.7%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-
 [demxanh.com]
 match = -57.1%%
 title = Đệm lò xo 1m5x1m9 (150x190cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html?srsltid=AfmBOoqbIVd7K8nFXZ_J0zFW9Uz0w-sQq5cv6ebJjoTBc7NDD9hApf86
+url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 38.9%%
