--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-03 14:52:15
+lastsearch = 2024-08-03 20:06:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -53.6%%
+title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -102,9 +102,9 @@ title = PHIẾU AN TOÀN HÓA CHẤT
 url = https://www.merckmillipore.com/Web-ES-Site/es_ES/-/EUR/ShowDocument-File?ProductSKU=MDA_CHEM-104354&DocumentType=MSD&DocumentId=104354_SDS_VN_VI.PDF&DocumentUID=47184070&Language=VI&Country=VN&Origin=PDP
 
 [www.facebook.com]
-match = -61.5%%
-title = Láre Việt Nam
-url = https://www.facebook.com/myphamdongythanhduoc/?locale=fr_CA
+match = -35.7%%
+title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
+url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
 
 [www.favri.org.vn]
 match = -10.7%%
