--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-03 16:42:23
+lastsearch = 2024-08-03 19:54:26
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -162.5%%
-title = bqThanh và Ốc Chơi POPPY PLAYTIME PHẦN 3 Rồi Gặp ...
-url = https://www.youtube.com/watch?v=6IG2RX1GjnE
+match = -168.8%%
+title = VÌ SAO REAL CÓ THỂ CHIÊU MỘ CẦU THỦ MIỄN PHÍ ĐỈNH ...
+url = https://www.youtube.com/watch?v=Uh7dDbqSuuQ
 
 [tuyensinh247.com]
 match = -218.8%%
