--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-03 18:46:22
+lastsearch = 2024-08-03 20:07:56
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -57.9%%
-title = Ga Chống Thấm 2m x 2m2( giao màu ngẫu nhiên)
-url = https://shopee.vn/Ga-Chống-Thấm-2m-x-2m2(-giao-màu-ngẫu-nhiên)-i.65265925.2337418304
+match = 21.1%%
+title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
+url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
 
 [www.lazada.vn]
 match = -136.8%%
@@ -32,8 +32,8 @@ title = Ga chống thấm cao cấp Everon
 url = https://www.everonvn.vn/chi-tiet/ga-chong-tham-cao-cap-everon.html
 
 [phuonghoangphat.com]
-match = -84.2%%
-title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= 120k ...
+match = -63.2%%
+title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
