--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-03 15:27:19
+lastsearch = 2024-08-03 19:58:35
 
 [www.lazada.vn]
 match = -94.4%%
@@ -12,9 +12,9 @@ title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
-match = -72.2%%
-title = Nem cua bể nhà em bán siêu ngon luôn mn nha
-url = https://m.facebook.com/groups/213134222458659/posts/1917229278715803/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [www.instagram.com]
 match = -50.0%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -33,8 +33,8 @@ url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
 match = -94.4%%
-title = LNS International Corporation | Houston TX
-url = https://www.facebook.com/lnsus2018/
+title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
+url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
 
 [voz.vn]
 match = 11.1%%
