--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-03 19:22:05
+lastsearch = 2024-08-03 19:57:34
 
 [www.everonvn.vn]
 match = -52.4%%
@@ -12,14 +12,14 @@ title = Ruột gối Everon 3D Mesh thiết kế dạng lưới ...
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-3d-mesh.html
 
 [shopee.vn]
-match = -81.0%%
-title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
-url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
+match = -47.6%%
+title = Ruột Gối Trắng Bông Gòn Tinh Khiết kích thước 45x65
+url = https://shopee.vn/Ruột-Gối-Trắng-Bông-Gòn-Tinh-Khiết-kích-thước-45x65-i.160662133.20387534389
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Ruột gối kê hoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html?srsltid=AfmBOopzRnyKt8hARvQil1G4irzJjcVg1FEF53cknloGPG396_fbhgv6
+match = 4.8%%
+title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -27,9 +27,9 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -33.3%%
-title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
+match = -38.1%%
+title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
@@ -39,7 +39,7 @@ url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-k
 [demxanh.com]
 match = -81.0%%
 title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html?srsltid=AfmBOorxvFsQ_DLP0QSW6BzCrfw_zxJ_ReSUXOBcBAP8_DMn510yYHTw
+url = https://demxanh.com/ruot-goi-kim-cuong.html
 
 [demhong.vn]
 match = -33.3%%
