--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-03 17:45:38
+lastsearch = 2024-08-03 20:05:08
 
 [erado.vn]
 match = 5.0%%
-title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+title = Giường da hạng sang mã AT14
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-at14.html
 
 [shopee.vn]
 match = -105.0%%
