--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-08-03 15:21:17
+lastsearch = 2024-08-03 20:01:41
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -287,8 +287,8 @@ title = TUI
 url = https://hk.linkedin.com/company/tuigroup?trk=public_profile_experience-item_profile-section-card_image-click
 
 [tui-magic-life-adults-only-16.aegeanhotelspage.com]
-match = -291.7%%
-title = Tui Magic Life Bodrum - Adults Only (16+) - Aegean Region
+match = -308.3%%
+title = Resort Tui Magic Life Bodrum - Adults Only (16+) Bodrum ...
 url = https://tui-magic-life-adults-only-16.aegeanhotelspage.com/en/
 
 [www.airliners.net]
@@ -497,7 +497,12 @@ title = Miss Cosmo added a new photo — at Thung Nham...
 url = https://m.facebook.com/100070582791098/photos/528788106150611/
 
 [www.seascanner.com]
-match = 8.3%%
-title = TUI Cruise Deals
+match = -25.0%%
+title = TUI Cruises 2022-2023
 url = https://www.seascanner.com/tui-cruises
+
+[www.datacenterdynamics.com]
+match = -66.7%%
+title = The transformation fallacy
+url = https://www.datacenterdynamics.com/en/analysis/the-transformation-fallacy-tui-cio/
 
