CI images update

--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-03 11:18:33
+lastsearch = 2024-08-03 20:29:17
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -260.0%%
-title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPnwTCPLg&sig=ACfU3U0bqzRn2mgwIKJwG9dCgAgnDTb7Qg&hl=en&sa=X&ved=2ahUKEwi6mY-gktaHAxUBDTQIHei9BzkQ6AF6BAglEAM
+match = -253.3%%
+title = Vocabolario universale della lingua italiana: già edito dal ...
+url = https://books.google.com/books?id=kjlCAQAAMAAJ&pg=PA211&lpg=PA211&dq=man+re+trang+16&source=bl&ots=mPT9KzWsJz&sig=ACfU3U16gzrQxuqtSepR2VTQzBkpM9KQmQ&hl=en&sa=X&ved=2ahUKEwiq_oHy9tiHAxXFK0QIHRSZCWcQ6AF6BAgrEAM
 
 [www.nolo.com]
 match = 0.0%%
@@ -1175,4 +1175,19 @@ url = https://immigration.gov.bb/pages/passport.aspx
 match = -220.0%%
 title = MLSsoccer.com - The Official Site of Major League Soccer
 url = https://www.mlssoccer.com/
+
+[www.biblegateway.com]
+match = -193.3%%
+title = Exodus 16 KJV - And they took their journey from Elim
+url = https://www.biblegateway.com/passage/?search=Exodus 16&version=KJV
+
+[www.bible.com]
+match = 0.0%%
+title = 
+url = https://www.bible.com/bible/116/EXO.16.31-35.NLT
+
+[www.indypl.org]
+match = -73.3%%
+title = Indianapolis Public Library: Home
+url = https://www.indypl.org/
 
