--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-08-03 13:27:01
+lastsearch = 2024-08-03 20:24:48
 
 [shopee.vn]
 match = -100.0%%
@@ -32,9 +32,9 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [www.sendo.vn]
-match = -76.2%%
-title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
-url = https://www.sendo.vn/tham-chan-giuong.htm
+match = -19.0%%
+title = THẢM TRẢI GIƯỜNG [Được kiểm hàng] 23295380
+url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23295380-117150966.html
 
 [everonvn.com.vn]
 match = -66.7%%
@@ -42,9 +42,9 @@ title = Kích thước đệm giường đơn tiêu chuẩn là bao nhiêu?
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [tiki.vn]
-match = -38.1%%
-title = Thảm trải giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải giường
+match = -71.4%%
+title = Thảm nhung trải giường loại 1m2 x 2m giao màu ngẫu nhiên
+url = https://tiki.vn/tham-nhung-trai-giuong-loai-1m2-x-2m-giao-mau-ngau-nhien-p89637996.html?spid=199647656
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -137,9 +137,9 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB12
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb11
 
 [www.lazada.vn]
-match = -109.5%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+match = -128.6%%
+title = Nệm giường ô tô trải vừa mọi loại xe, Miếng lót nằm xe ôtô ...
+url = https://www.lazada.vn/products/nem-giuong-o-to-trai-vua-moi-loai-xe-mieng-lot-nam-xe-oto-t-sieu-chac-chan-va-chiu-tai-tot-tham-trai-dem-o-to-ngu-khi-di-xa-nem-giuong-o-to-dem-giuong-ngu-xe-o-to-5-cho-nem-xe-hoi-4-cho-dem-ghe-xe-o-to-i2023243507.html
 
 [dogohiephien.vn]
 match = -104.8%%
@@ -180,4 +180,14 @@ url = https://noithattamviet.com/giuong-ngu-tam-viet-gn-12
 match = -52.4%%
 title = Giường bọc nệm - LND 12 - Nội thất là nhà
 url = https://decor.lanha.vn/san-pham/giuong-boc-nem-lnd-12/
+
+[luzo.vn]
+match = -85.7%%
+title = Tìm hiểu kích thước giường ngủ cho từng loại chuẩn nhất
+url = https://luzo.vn/tim-hieu-kich-thuoc-giuong-ngu-cho-tung-loai-chuan-nhat.html
+
+[demxanh.com]
+match = -66.7%%
+title = Top 6 loại nệm tốt nhất cho giường khung năm 2024
+url = https://demxanh.com/nem-tot-nhat-cho-khung-giuong.html
 
