--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-03 18:54:40
+lastsearch = 2024-08-03 20:23:43
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOop5wGIcYtBkfUhjSsIAjppLSdJabDNUCUjM5SXyUaVzcS89R_mm
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
@@ -105,4 +105,9 @@ url = https://grandescapades.net/glimpses-of-bali-a-selection-of-40-pictures/
 match = -73.9%%
 title = Baggage Tampering and Security - Bali Message Board
 url = https://www.tripadvisor.co.uk/ShowTopic-g294226-i7220-k5690311-o10-Baggage_Tampering_and_Security-Bali.html
+
+[kitkit.vn]
+match = -21.7%%
+title = THẢM PHỦ SOFA,THẢM THỔ CẨM VINTAGE 180x230(ĐỎ)
+url = https://kitkit.vn/shopping/tham-phu-sofa-tham-tho-cam-vintage-180x230-do-p59418167.html
 
