--- a/images/bo-ga-chun-chan-lua-warmdream-160x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-160x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-160x200-hq.html
 lastopen = 2024-06-09 23:45:27
 
 [search]
-lastsearch = 2024-08-03 18:30:43
+lastsearch = 2024-08-03 20:28:33
 
 [www.diepxuan.com]
-match = 45.0%%
-title = Bộ chun chần WarmDream 160x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-160x200-lua.html
+match = 42.5%%
+title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOoqjgKcxYHo9yLheFNuxy7Fe4eKr1RjVJOZ8DIefGWXLQiL13EcR
 
 [www.tripadvisor.com.sg]
 match = -10.0%%
