--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-03 04:58:46
+lastsearch = 2024-08-03 20:20:38
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -33,8 +33,8 @@ url = https://www.yellowpages.vn/class/490435/chiếu-nhựa,-chiếu-cói-ở_h
 
 [tiki.vn]
 match = -80.0%%
-title = Chiếu Nhựa Hà Nội (1,5m , 1,6m , 1m8 x 2m ,1m8x3m , ...
-url = https://tiki.vn/chieu-nhua-freeship-chieu-nhua-ha-noi-1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m-p131589762.html?spid=198258706
+title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
 
 [www.sendo.vn]
 match = -35.0%%
@@ -48,8 +48,8 @@ url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.76356
 
 [www.diepxuan.com]
 match = 15.0%%
-title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
 
 [www.lazada.vn]
 match = 10.0%%
