--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-03 14:58:41
+lastsearch = 2024-08-03 20:17:53
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -67,8 +67,8 @@ title = The 2024 Florida Statutes
 url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
 
 [sofl.cooperatornews.com]
-match = -152.9%%
-title = Who Do You Call? Fraud, Mismanagement and Rule- ...
+match = -176.5%%
+title = Who Do You Call? Fraud, Mismanagement and Rule-Breaking
 url = https://sofl.cooperatornews.com/article/who-do-you-call
 
 [www.washingtonpost.com]
