--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-03 17:33:19
+lastsearch = 2024-08-03 20:22:41
 
 [shopee.vn]
-match = -171.4%%
-title = [BẢO HÀNH 18 THÁNG] Màn Chụp Tự Bung Đỉnh Rộng ...
-url = https://shopee.vn/-BẢO-HÀNH-18-THÁNG-Màn-Chụp-Tự-Bung-Đỉnh-Rộng-Cao-Cấp-Màn-Đỉnh-Vuông-Hàng-Đẹp-Dày-Dặn-2m2_1m8_1m6-i.176591078.7737140981
+match = -178.6%%
+title = Màn chụp tự bung đỉnh vuông cao cấp bảo hành 18 tháng
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-cao-cấp-bảo-hành-18-tháng-Mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-i.321953124.23825582591
 
 [mungthienmetta.com]
 match = -185.7%%
@@ -27,14 +27,14 @@ title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
 url = https://manthutrang.com/
 
 [www.mantubung.com]
-match = -150.0%%
-title = Mùng Chụp Tự Bung Người Lớn chống muỗi BẢO BẢO
-url = https://www.mantubung.com/mung-chup-tu-bung.html
+match = -228.6%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [www.lazada.vn]
-match = -164.3%%
-title = Màn chụp tự bung đỉnh vuông Cao Cấp. Mùng gấp ...
-url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap-mung-gap-dinh-vuong-co-chan-vien-gia-tan-xuong-bh-18-thang-i1643502299.html
+match = -242.9%%
+title = màn tự bung hàng cao cấp, nhiều kích thước, gấp gọn tiện ...
+url = https://www.lazada.vn/products/man-chup-tu-bung-dinh-vuong-gia-xuong-hang-viet-nam-100-bao-hanh-18-thang-man-tu-bung-hang-cao-cap-nhieu-kich-thuoc-gap-gon-tien-dung-chong-muoi-hieu-qua-i1531214550.html
 
 [www.mungbaobao.com]
 match = -214.3%%
