--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-08-03 17:13:39
+lastsearch = 2024-08-03 20:17:11
 
 [bilystore.vn]
 match = -95.2%%
@@ -12,9 +12,9 @@ title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
 url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -85.7%%
-title = Khăn trải giường, đắp người LOẠI 1 siêu mềm, dày dặn ...
-url = https://shopee.vn/Khăn-trải-giường-đắp-người-LOẠI-1-siêu-mềm-dày-dặn-cho-spa-thẩm-mỹ-viện-kt-90*1m9-nặng-700GR-i.235726001.14824188007
+match = -109.5%%
+title = Thảm Lông Trải Sàn, thảm trải chân giường, trải chân ghế ...
+url = https://shopee.vn/Thảm-Lông-Trải-Sàn-thảm-trải-chân-giường-trải-chân-ghế-sofa-trang-trí-hàng-loại-1-(-Size-80cmx200cm)-i.120420833.21320198200
 
 [tiki.vn]
 match = -38.1%%
