--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -312,9 +312,9 @@ title = GW170104: Observation of a 50-solar-mass binary black ...
 url = https://www.ligo.org/detections/GW170104/paper/GW170104-Supplement.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -84.2%%
-title = Vancomycin Resistance in Enterococcus and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9866002/
+match = -173.7%%
+title = Evaluation of the Extent of Variant Histology in Urothelial ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
 
 [www.ucdavis.edu]
 match = -52.6%%
