CI images update

--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-03 20:28:48
+lastsearch = 2024-08-03 20:58:34
 
 [shopee.vn]
 match = 19.4%%
@@ -19,7 +19,7 @@ url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spi
 [www.diepxuan.com]
 match = 58.1%%
 title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html?srsltid=AfmBOoquBhMNFhnhotrSO4Y-m2ml9jWSdhS0mgOtq36NJ6ATv_CjZKml
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [m.facebook.com]
 match = 12.9%%
