--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-03 18:49:52
+lastsearch = 2024-08-03 20:48:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -29,7 +29,7 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
 [demxanh.com]
 match = 0.0%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html?srsltid=AfmBOorMQITDMdkOgdmeuBhtm_9EgVEFz_26pZgpQwIrFoeqoBYF2DW4
 
 [thegioinem.com]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 39.3%%
-title = Bộ ga chun chần Everon EST21034
-url = https://happynest.vn/shop/EBGCTEST21034/Bộ ga chun chần Everon EST21034.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
