--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-03 13:28:43
+lastsearch = 2024-08-03 20:48:42
 
 [tiki.vn]
 match = -133.3%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -193.3%%
-title = Chăn lông cừu 2 lớp loại dày siêu ấm cho bé (kt 100x140cm)
-url = https://shopee.vn/Chăn-lông-cừu-2-lớp-loại-dày-siêu-ấm-cho-bé-(kt-100x140cm)-i.37776623.7893775484
+match = -180.0%%
+title = Chăn Lông Cừu Ultimate Loại Dày 2 Lớp Mới Nhất Có Sẵn ...
+url = https://shopee.vn/Chăn-Lông-Cừu-Ultimate-Loại-Dày-2-Lớp-Mới-Nhất-Có-Sẵn-Chăn-Lông-Kích-Thước-2mx2m3-i.221764189.4349699969
 
 [changadep88.vn]
 match = -86.7%%
