--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-03 13:38:26
+lastsearch = 2024-08-03 20:47:39
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Vietnamese_language
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYedNXN&sig=ACfU3U2sX2qRNqHyzwi_FX5WhtOcUSqBTg&hl=en&sa=X&ved=2ahUKEwjKze-Hm9iHAxVCI0QIHbxrEmAQ6AF6BAgnEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrYh8U1G&sig=ACfU3U35-p99j92Oaq0y9EAnexz04VL9NQ&hl=en&sa=X&ved=2ahUKEwjooN__-tiHAxV7MlkFHflsDg8Q6AF6BAgkEAM
 
 [www.travelweekly.com]
 match = -87.0%%
