--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-03 17:40:13
+lastsearch = 2024-08-03 20:55:51
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 42.4%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
