--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-08-03 16:42:02
+lastsearch = 2024-08-03 20:56:30
 
 [everonvn.com.vn]
 match = -11.1%%
@@ -12,9 +12,9 @@ title = Bộ Everon Ep1831 - Curtis
 url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
-match = -111.1%%
-title = ♀Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+match = -133.3%%
+title = [FREESHIP MAX] Vỏ gối ôm satin cao cấp [Bear Bedding]
+url = https://www.lazada.vn/products/freeship-max-vo-goi-om-satin-cao-cap-bear-bedding-i2125036248.html
 
 [www.reddit.com]
 match = -150.0%%
@@ -42,8 +42,8 @@ title = Vỏ gối ESM20013 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-esm20013-45x65.html
 
 [shopee.vn]
-match = -116.7%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
