--- a/images/man-khung/config.ini
+++ b/images/man-khung/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-khung.html
 lastopen = 2024-06-07 00:53:59
 
 [search]
-lastsearch = 2024-08-03 17:49:43
+lastsearch = 2024-08-03 21:21:07
 
 [mungmocmien.com]
 match = 77.8%%
@@ -120,4 +120,9 @@ url = https://www.8days.sg/entertainment/local/simonboy-wedding-concorde-hotel-8
 match = -477.8%%
 title = Stone Inscriptions of Tsogtu Khung-Taiji, Prince of Khalkha
 url = https://www.unesco.org/en/memory-world/stone-inscriptions-tsogtu-khung-taiji-prince-khalkha
+
+[xaydungvuongphat.com]
+match = 100.0%%
+title = Man Khung
+url = https://xaydungvuongphat.com/man-khung-xep-mau-10
 
