--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-03 18:47:50
+lastsearch = 2024-08-03 21:21:26
 
 [everon.online]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [everonvn.com.vn]
-match = -4.3%%
-title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOooUrQG83uB45Yf-0VIg1RbenRyHNbEoQFx9eliswUGRcfR5OzTY
+match = 38.2%%
+title = Bộ Ga Chun At-04 Giảm Giá - Everon
+url = https://everonvn.com.vn/everon/136/bo-he-everon
 
 [tiki.vn]
 match = 29.4%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = 17.9%%
-title = Bộ chăn ga Everon EPBC-25014
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epbc-25014-pd.html
+match = -2.9%%
+title = Bộ chăn ga gối Everon ESB-22054 đơn giản mà tinh tế
+url = https://everonhanquoc.com.vn/bo-chan-ga-goi-everon-esb-22054-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -78,13 +78,13 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [demxanh.com]
 match = -2.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 10
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-10.html?srsltid=AfmBOoo80KbCMYXTTor9qpO2_Ax5PhVu9ukdocRyTD8QWMWcSyAkhUFn
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [antbedding.com]
 match = 26.5%%
