--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-03 17:20:27
+lastsearch = 2024-08-03 21:28:36
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = -56.5%%
-title = Chiếu Tre Cao bằng Nan to loại đẹp Mát Lạnh Mùa Hè ...
-url = https://shopee.vn/Chiếu-Trúc-Long-Chiếu-Tre-Cao-bằng-Nan-to-loại-đẹp-Mát-Lạnh-Mùa-Hè-Đủ-Tất-Cả-Các-Kích-Thước-i.126028938.19577907706
+match = -69.6%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [lombom.com]
 match = -60.9%%
@@ -52,9 +52,9 @@ title = Địa chỉ bán chiếu trúc Cao Bằng tại 63 tỉnh thành
 url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-cao-bang-tai-63-tinh-thanh/
 
 [www.facebook.com]
-match = -73.9%%
-title = Chiếu Trúc Cao Bằng Cao Sơn dòng đối mục loại 1 | ‼️Địa ...
-url = https://www.facebook.com/demhong.vn/videos/chiếu-trúc-cao-bằng-cao-sơn-dòng-đối-mục-loại-1/843056673315667/?locale=de_DE
+match = 13.0%%
+title = Chiếu trúc Bản Ngà - Cao Bằng | Cao Bang
+url = https://www.facebook.com/chieucaobang/
 
 [chieutruc.info]
 match = -73.9%%
