--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-03 14:59:03
+lastsearch = 2024-08-03 21:26:54
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = aDz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=aDz
+title = adz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=.adz
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -437,7 +437,7 @@ title = 13 điểm mới của Luật trật tự an toàn giao thông đường
 url = https://baobacgiang.vn/13-diem-moi-cua-luat-trat-tu-an-toan-giao-thong-duong-bo-103308.bbg
 
 [xoilaczvu.tv]
-match = -226.7%%
-title = Trực tiếp Magic United TFA vs North Lakes vào lúc 14:00 ...
-url = https://xoilaczvu.tv/truc-tiep/magic-united-tfa-vs-north-lakes-luc-1400-ngay-03-08-2024/
+match = -233.3%%
+title = Trực tiếp Souths United vs Samford Ranges vào lúc 15:30 ...
+url = https://xoilaczvu.tv/truc-tiep/souths-united-vs-samford-ranges-luc-1400-ngay-03-08-2024/
 
