--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-08-03 09:48:18
+lastsearch = 2024-08-03 21:14:09
 
 [shopee.vn]
 match = -73.9%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Hà Hằng - Tổng Kho Chiếu Nhựa Cao Cấp ...
 url = https://m.facebook.com/61552187007911/
 
 [tiki.vn]
-match = -21.7%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
+match = -47.8%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384250
 
 [trangvangvietnam.com]
 match = 21.7%%
@@ -59,7 +59,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 80x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-80x190.html?srsltid=AfmBOop3vGYpwr4WyO44cfEtvSsxOJauK4grSnHEAlaQC3eAD0-vIfwU
 
 [baothaibinh.com.vn]
 match = 17.4%%
