--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-03 19:25:08
+lastsearch = 2024-08-03 21:29:18
 
 [www.cms.gov]
 match = 4.5%%
@@ -62,9 +62,9 @@ title = Wed 14 Nov 2012 - Att 15 Wade Wiebe
 url = https://www.kslegislature.org/li_2012/b2011_12/committees/misc/ctte_leg_budget_1_20121114_15_other.pdf
 
 [files.eric.ed.gov]
-match = -131.8%%
-title = 11 $1111 ,111111, 1111111 11111111 1111 .111 1111111 ...
-url = https://files.eric.ed.gov/fulltext/ED543906.pdf
+match = -104.5%%
+title = Ratio, Proportign and Scaling. Mathematics Resource ...
+url = https://files.eric.ed.gov/fulltext/ED183364.pdf
 
 [www.oregon.gov]
 match = -27.3%%
@@ -227,9 +227,9 @@ title = MAPA 2035 Long Range Transportation Plan
 url = https://mapacog.org/wp-content/uploads/2015/10/LRTP_2035_Amendment2.pdf
 
 [www.ars-grin.gov]
-match = 13.6%%
-title = Plant Inventory No. 205
-url = https://www.ars-grin.gov/npgs/pi_books/scans/pi205.pdf
+match = -18.2%%
+title = Plant Inventory No. 199, Part II
+url = https://www.ars-grin.gov/npgs/pi_books/scans/pi199pt2.pdf
 
 [www.iowa-city.org]
 match = -45.5%%
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [appropriations.house.gov]
-match = -109.1%%
-title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
@@ -628,8 +628,8 @@ url = https://www.bpelsg.ca.gov/pubs/num_eng_82.pdf
 
 [ftp.wildfire.gov]
 match = -22.7%%
-title = Management ActionPoints BobcatFire
-url = https://ftp.wildfire.gov/public/incident_specific_data/calif_s/2020_Incidents/CA-ANF-003687_Bobcat/GIS/Products/20200924/MAP_archE_land_20200924_0023_Bobcat_CAANF3687.pdf
+title = OPS_IR_Overview_archE_land_...
+url = https://ftp.wildfire.gov/public/incident_specific_data/calif_s/2020_Incidents/CA-ANF-003687_Bobcat/GIS/Products/20200922/OPS_IR_Overview_archE_land_20200922_0810_Bobcat_CAANF3687_0922Day.pdf
 
 [www.smfd.org]
 match = -113.6%%
