--- a/images/vo-goi-ke-warmdream-45x65-hq/config.ini
+++ b/images/vo-goi-ke-warmdream-45x65-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 lastopen = 2024-07-01 10:42:00
 
 [search]
-lastsearch = 2024-08-03 20:53:49
+lastsearch = 2024-08-03 21:18:42
 
 [www.diepxuan.com]
-match = 28.6%%
-title = Điệp Xuân Vỏ gối kê màu 45x65
-url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html?srsltid=AfmBOop7DivyVcTQHDjUtQYV7KoEnpVwy4J03TdaHnJOALq6_K3vfrF4
+match = 35.7%%
+title = Vỏ gối kê màu 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ke-mau-45x65.html
 
 [www.head-fi.org]
 match = 8.0%%
