--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-03 17:37:03
+lastsearch = 2024-08-03 21:32:15
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Chiếu trúc thai đen14 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-thai-den14.html
+url = https://www.diepxuan.com/chieu-truc-thai-den14.html?srsltid=AfmBOoqweBtRzZjuJcRO6VcTFjOt2fnArCKQbMd8N_OJJpFVdbBwX2ZI
 
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOooxjhd0OVOAjzWHnedb-9csGOZFc6DEUG3lciyjhSJ9dxwqtCtD
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOooL8PeinUjY8LJvJb9hjTHUpRSj59kDr2jayrGPZso4bUaMagfA
 
 [tiki.vn]
 match = -42.9%%
