CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-03 15:17:05
+lastsearch = 2024-08-03 21:58:16
 
 [shopee.vn]
 match = -25.9%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 [www.lazada.vn]
 match = -11.1%%
 title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html?srsltid=AfmBOoqdCtbQZdhz6AKuhiEL1hb2P3R_pGm35iIj1VHoPcmgF8MyWP70
+url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
 
 [tiki.vn]
 match = 7.4%%
