--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-03 15:24:36
+lastsearch = 2024-08-03 21:46:08
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
