--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-03 17:46:39
+lastsearch = 2024-08-03 21:53:03
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -231.2%%
-title = Tay vợt Lê Đức Phát đã từng khiến đối thủ phải chịu trận sau ...
-url = https://m.facebook.com/blvbiencuong/videos/tay-vợt-lê-đức-phát-đã-từng-khiến-đối-thủ-phải-chịu-trận-sau-hai-sét-tại-sea-gam/1622451491633287/
+match = -137.5%%
+title = 🛑 TRỰC TIẾP: U18 BẠC LIÊU - TÙNG DƯƠNG FC 🚩Giải ...
+url = https://m.facebook.com/Tynguyenmedia.vn/videos/-trực-tiếp-u18-bạc-liêu-tùng-dương-fc-giải-bóng-đá-u18-vsports-toàn-quốc-mùa-3-2/1640507346746178/
 
 [baomoi.com]
 match = -193.8%%
@@ -667,8 +667,8 @@ title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
 
 [vba.vn]
-match = -81.2%%
-title = GIẢI BÓNG RỔ CHUYÊN NGHIỆP VIỆT NAM
+match = -37.5%%
+title = THÔNG TIN CÂU LẠC BỘ Saigon Heat
 url = https://vba.vn/clubs/saigon-heat
 
 [hanoionline.vn]
