--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-03 16:21:18
+lastsearch = 2024-08-03 21:57:33
 
 [www.zillow.com]
-match = -69.2%%
-title = 18 Long St, Newnan, GA 30263
-url = https://www.zillow.com/homedetails/18-Long-St-Newnan-GA-30263/54506040_zpid/
+match = -115.4%%
+title = 18 Long St #18, East Pt, GA 30344
+url = https://www.zillow.com/homedetails/18-Long-St-18-East-Pt-GA-30344/249124519_zpid/
 
 [blog.massmutual.com]
 match = -276.9%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOorFbdIWUw4WIyNrwDFTLlcUm_ujQIVVc_I4haTHgH9776_Y5ztF
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
