--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-03 20:17:53
+lastsearch = 2024-08-03 22:01:31
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.flsenate.gov/laws/statutes/2018/720.303
 [www.doorloop.com]
 match = 0.0%%
 title = 
-url = https://www.doorloop.com/laws/texas-hoa-laws
+url = https://www.doorloop.com/laws/arizona-hoa-laws
 
 [www.reddit.com]
 match = -141.2%%
