--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-03 20:05:52
+lastsearch = 2024-08-03 21:56:10
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -115.0%%
-title = Bộ giường ngủ hiện đại nhập khẩu - Mẫu giường tủ gỗ đẹp ...
-url = https://noithattana.vn/giuong-tu-hien-dai/
+match = -75.0%%
+title = Bộ giường ngủ nhập khẩu Đài Loan cao cấp ...
+url = https://noithattana.vn/giuong-ngu/
 
 [tiki.vn]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB15
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
-match = -115.0%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu
+match = -135.0%%
+title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
 
 [www.quiphuc.com]
 match = 25.0%%
