CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-03 16:16:07
+lastsearch = 2024-08-03 22:31:35
 
 [shopee.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
 url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
 
 [www.diepxuan.com]
-match = -14.3%%
-title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html?srsltid=AfmBOor0yi64yn8fVRlsCqzhRVOftUWDyVCzwvgRl59rZ9V-_cxnk-21
+match = -10.0%%
+title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -44,7 +44,7 @@ url = https://chieutruc.org/chieu-truc-tam-ht-120x190
 [thegioidemonline.com]
 match = -5.0%%
 title = Chiếu trúc thanh Hương Trúc 150 x 190cm
-url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html?srsltid=AfmBOophS9DVmRLjgoUGyWDu7VolVf6aYbayLULWL085WJzhKuL2Ce02
+url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html
 
 [www.facebook.com]
 match = 31.6%%
