--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-03 21:16:14
+lastsearch = 2024-08-03 22:44:35
 
 [screenrant.com]
 match = 0.0%%
@@ -222,9 +222,9 @@ title = The Tenth Man Rule - Principle Explained
 url = https://insightbeforeaction.com/the-tenth-man-rule-principle-explained/
 
 [www.quora.com]
-match = -135.7%%
-title = What are some swear words in Vietnamese?
-url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+match = -178.6%%
+title = Do the Israelis really have a 10th man doctrine?
+url = https://www.quora.com/World-War-Z-2013-movie-Do-the-Israelis-really-have-a-10th-man-doctrine
 
 [atlasorganization.com]
 match = 0.0%%
@@ -455,4 +455,9 @@ url = https://savageuniversal.com/us-en/blog/the-green-screen-alternative-black-
 match = -214.3%%
 title = Lịch bay từ Vịnh Xanh (Green Bay) đến Manchester | GRB
 url = https://www.wego.vn/lich-bay/grb/man/chuyen-bay-re-nhat-tu-green-bay-den-manchester
+
+[www.footlocker.com]
+match = 0.0%%
+title = Jordan Retro 10 Shoes
+url = https://www.footlocker.com/category/shoes/jordan/retro-10.html
 
