--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-08-03 16:17:51
+lastsearch = 2024-08-03 22:42:12
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -22,9 +22,9 @@ title = Ruột gối Microfiber Korea Virgin
 url = https://www.detmaykimthanh.com/shops/goi/goi-khach-san-131.html
 
 [shopee.vn]
-match = -58.8%%
-title = Đôi Ruột Gối Bông Hạt Korea Ép Hơi 50*70cm
-url = https://shopee.vn/🌱-Đôi-Ruột-Gối-Bông-Hạt-Korea-Ép-Hơi-50*70cm-i.125787394.5970171584
+match = 0.0%%
+title = Ruột gối Korea | Shopee Việt Nam
+url = https://shopee.vn/Ruột-gối-Korea-i.33372594.2602291227
 
 [demxanh.com]
 match = -100.0%%
