--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-03 21:15:55
+lastsearch = 2024-08-03 22:38:48
 
 [www.tui.co.uk]
-match = -66.7%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = 0.0%%
+title = Buy South Korean won
+url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
 
 [uk.trip.com]
 match = -233.3%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -325.0%%
-title = Tour giant TUI expects bright summer despite higher prices
-url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
+match = -216.7%%
+title = TUI AG says will not make offer for TUI Travel
+url = https://www.reuters.com/article/business/tui-ag-says-will-not-make-offer-for-tui-travel-idUSTRE49F1VI/
 
 [www.mybaggage.com]
 match = -116.7%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -308.3%%
-title = Road of the Kasbahs 4x4 Tour with Lunch in Aït Benhaddou
-url = https://www.tuimusement.com/us/morocco/marrakech/road-of-the-kasbahs-4x4-tour-with-lunch-in-ait-benhaddou-6/e_j30ek-d_160-c_118/
+match = -325.0%%
+title = TUI Musement: Book Tickets for Experiences and Activities ...
+url = https://www.tuimusement.com/uk/
 
 [www.dixondirectional.com]
 match = -166.7%%
