--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-03 17:49:01
+lastsearch = 2024-08-03 22:36:22
 
 [www.lazada.vn]
-match = -46.7%%
-title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
+match = -193.3%%
+title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
 
 [shopee.vn]
-match = 13.3%%
-title = Vỏ gối vuông Dollar 45-45cm
-url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
+match = -140.0%%
+title = Rẻ Vô Địch Gối vuông tựa trang trí ( Gồm vỏ + ruột
+url = https://shopee.vn/Rẻ-Vô-Địch-Gối-vuông-tựa-trang-trí-(-Gồm-vỏ-ruột-Giá-tại-xưởng)-i.18055727.785277066
 
 [jysk.vn]
 match = -166.7%%
@@ -129,7 +129,7 @@ url = https://gagoda.vn/san-pham/chi-tiet/vo_goi_vuong_long/6918
 [dienmaycholon.com]
 match = -33.3%%
 title = Gối & Vỏ Gối (Có 16 sản phẩm)
-url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi&srsltid=AfmBOoptZ-l-FnwwJ7Fl9WK-ubhwWHAgIgWtiyr6mkoZ-C8L8NxEMgQn
+url = https://dienmaycholon.com/goi-vo-goi?t=vo-goi
 
 [phedecor.com]
 match = 6.7%%
