--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-03 19:57:34
+lastsearch = 2024-08-03 22:57:36
 
 [www.everonvn.vn]
-match = -52.4%%
-title = Ruột gối Everon 3D Mesh thiết kế dạng lưới ...
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-3d-mesh.html
+match = 42.9%%
+title = Ruột gối Everon Classic
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-classic.html
 
 [shopee.vn]
-match = -47.6%%
-title = Ruột Gối Trắng Bông Gòn Tinh Khiết kích thước 45x65
-url = https://shopee.vn/Ruột-Gối-Trắng-Bông-Gòn-Tinh-Khiết-kích-thước-45x65-i.160662133.20387534389
+match = 28.6%%
+title = Ruột gối bông hạt 45x65(1 chiếc)
+url = https://shopee.vn/Ruột-gối-bông-hạt-45x65(1-chiếc)-i.169472495.5409480657
 
 [www.diepxuan.com]
-match = 4.8%%
-title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
+match = 42.9%%
+title = Ruột gối kê hoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -27,9 +27,9 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -38.1%%
-title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
+match = -33.3%%
+title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
