--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-03 19:55:28
+lastsearch = 2024-08-03 22:52:44
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -22,8 +22,8 @@ title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
-match = -104.5%%
-title = Thảm tròn trải chân giường trong phòng ngủ phòng khách ...
+match = -50.0%%
+title = Thảm tròn trải chân giường trong phòng ngủ ...
 url = https://flexhouse.vn/tham-tron-trai-chan-giuong-trong-phong-ngu-phong-khach-tbd6002
 
 [ochino.com]
@@ -77,9 +77,9 @@ title = Top 10 Thảm Trải Sàn tốt nhất hiện nay (Tư vấn mua 2024)
 url = https://vn.my-best.com/37075
 
 [www.airbnb.com.vn]
-match = -136.4%%
-title = Căn hộ cho thuê tại Bras-Panon, Saint-Benoît, Réunion - Airbnb
-url = https://www.airbnb.com.vn/rooms/1104230023148123684
+match = -122.7%%
+title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
+url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
 match = -109.1%%
@@ -137,12 +137,17 @@ title = Review of Diamond Cave (Tham Phra Nang Nai) - Tripadvisor
 url = https://en.tripadvisor.com.hk/ShowUserReviews-g1507054-d14162961-r631367729-Diamond_Cave_Tham_Phra_Nang_Nai-Ao_Nang_Krabi_Town_Krabi_Province.html
 
 [vn.trip.com]
-match = -90.9%%
-title = Khách sạn giá rẻ gần Tokmanni Leppävirta, Leppavirta
-url = https://vn.trip.com/hotels/leppavirta-tokmanni-leppvirta/hotels-c56246m28561957/
+match = -131.8%%
+title = Khách sạn giá rẻ gần kalastuspalvelut Lahnalampi, Jarviseutu
+url = https://vn.trip.com/hotels/jarviseutu-kalastuspalvelut-lahnalampi/hotels-c259315m29503085/
 
 [www.booking.com]
 match = -109.1%%
 title = Location Berck T II Confort Balcon Front de mer Plage
 url = https://www.booking.com/hotel/fr/appartement-type-ii-confort-balcon-front-de-mer-berck.vi.html
+
+[namduonghome.net]
+match = -63.6%%
+title = Cách giặt thảm sợi tổng hợp đơn giản mà hiệu quả
+url = https://namduonghome.net/tin-tuc-moi/cach-giat-tham-soi-tong-hop-don-gian-ma-hieu-qua/
 
