--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-08-03 20:14:42
+lastsearch = 2024-08-03 22:59:01
 
 [www.kymdan.com]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://yeshomebedding.com/bo-san-pham-everon-ept24034
 [www.lazada.vn]
 match = -15.6%%
 title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html?srsltid=AfmBOorZyMWq2LwSd-XvrCoLPA6Z-drkZ3QN-xuKWljU7v8HPRY57OBv
 
 [shopee.vn]
 match = -25.0%%
