--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-03 21:24:07
+lastsearch = 2024-08-03 22:54:27
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,8 +27,8 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = 17.9%%
-title = Việc làm spa uy tín - Facebook
+match = -71.4%%
+title = Việc làm spa uy tín ✅ | 👉500k,600k700k....../1lít serum ...
 url = https://m.facebook.com/groups/263939630749643/posts/1929234707553452/
 
 [www.dkn.tv]
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -46.4%%
+title = Những câu hỏi thường gặp tại Khoa Khám bệnh chuyên khoa ...
+url = http://www.impehcm.org.vn/noi-dung/tin-hoat-dong/nhung-cau-hoi-thuong-gap-tai-khoa-kham-benh-chuyen-khoa-ky-sinh-trung.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
