--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-08-03 20:57:10
+lastsearch = 2024-08-03 22:58:19
 
 [vnexpress.net]
 match = -128.6%%
@@ -17,9 +17,9 @@ title = Review Khu Du Lịch Hồ Mây Park Vũng Tàu
 url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
-match = -114.3%%
-title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
-url = https://www.youtube.com/watch?v=St3S4ilkoIY
+match = -61.9%%
+title = Daily Vlog: 12 tiếng du lịch bụi ở Vũng Tàu…
+url = https://www.youtube.com/watch?v=d8mZRVKGnIo
 
 [liontrip.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -128.6%%
-title = Tour Vũng Tàu 4 ngày 3 đêm tự túc cập nhật mới nhất năm ...
-url = https://haivan.com/diem-den/Vung-tau/tour-vung-tau-4-ngay-3-dem-tu-tuc-cap-nhat-moi-nhat-nam-2020
+match = -85.7%%
+title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
 
 [lockernlock.vn]
 match = -71.4%%
@@ -352,7 +352,7 @@ title = Lịch Trình Du Lịch Vũng Tàu 3 Ngày 2 Đêm Từ Sài Gòn
 url = https://www.klook.com/vi/blog/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem/
 
 [www.traveloka.com]
-match = -114.3%%
-title = Hồ Tràm Vũng Tàu: kinh nghiệm du lịch chi tiết tháng 7/2024
-url = https://www.traveloka.com/vi-vn/explore/destination/ho-tram-vung-tau/143529
+match = -57.1%%
+title = Kinh nghiệm du lịch biển Long Hải mới nhất 2024
+url = https://www.traveloka.com/vi-vn/explore/destination/du-lich-long-hai-acc/154790
 
