--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-09 22:36:42
 lastsearch = 2024-08-03 22:43:13
 
 [shopee.vn]
-match = -104.5%%
-title = (kích thước lớn, Giá sỉ) Chiếu nhựa gấp gọn cao cấp 2m ...
-url = https://shopee.vn/(kích-thước-lớn-Giá-sỉ)-Chiếu-nhựa-gấp-gọn-cao-cấp-2m-3m-4m-i.98572225.23343768889
+match = -90.9%%
+title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
+url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
 
 [www.facebook.com]
 match = 36.4%%
