--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-03 17:20:06
+lastsearch = 2024-08-03 22:53:26
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -17,8 +17,8 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -50.0%%
-title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng ...
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
