--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-03 21:44:25
+lastsearch = 2024-08-03 22:46:00
 
 [demxanh.com]
 match = -18.5%%
 title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
-url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html?srsltid=AfmBOoqsvdVcUJjqMW_E9KUk6Nohzc0bSEqdy_jNmvP0QCquUODq7MLb
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [demre.com.vn]
 match = 66.7%%
@@ -42,14 +42,14 @@ title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
 url = https://thegioidemviet.vn/chieu-truc/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Chiếu trúc trung quốc
-url = https://www.diepxuan.com/chieu-truc/chieu-truc-trung-quoc.html?srsltid=AfmBOor6zb7ZCaaMwvgIJq1EGd_Cm81QN-ha2mfq5eRI01bmvVrWqNMz
+match = 63.0%%
+title = Điệp Xuân Chiếu trúc Thái đen 160x200
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 
 [shopee.vn]
 match = -18.5%%
 title = Chiếu tre gấp vân gỗ Thái Lan 200x220| 180x200| 160x200
-url = https://shopee.vn/Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
+url = https://shopee.vn/universal-link/-Mã-SKAMLSC0206-giảm-10-tối-đa-70K-đơn-100K-Chiếu-tre-gấp-vân-gỗ-Thái-Lan-200x220-180x200-160x200-i.334752746.7193995503
 
 [tiki.vn]
 match = -7.4%%
