--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-03 22:00:04
+lastsearch = 2024-08-03 23:01:26
 
 [quizlet.com]
 match = -170.0%%
@@ -47,14 +47,14 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = 16.7%%
-title = MC Ren
-url = https://en.wikipedia.org/wiki/MC_Ren
+match = -120.0%%
+title = List of acupuncture points
+url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgoQKni9&sig=ACfU3U0n8Lvsqnfqd1vFQxbfTTra4L1bRg&hl=en&sa=X&ved=2ahUKEwiqg8eXi9mHAxVjODQIHR4rDUcQ6AF6BAgYEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpHDtqb&sig=ACfU3U1p06b2zw3ORIp_Ftr2SdXbhnrFYQ&hl=en&sa=X&ved=2ahUKEwin0pXzmNmHAxUZE0QIHTgICXQQ6AF6BAgYEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
