--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-03 20:19:56
+lastsearch = 2024-08-03 22:48:30
 
 [www.sendo.vn]
 match = 0.0%%
@@ -22,8 +22,8 @@ title = THẢM TRẢI SÀN NỈ DỆT CAO CẤP 18 TẤM
 url = https://shopee.vn/THẢM-TRẢI-SÀN-NỈ-DỆT-CAO-CẤP-18-TẤM-THẢM-XỐP-GHÉP-MIẾNG-TƯỜNG-LÂM-SANG-TRỌNG-PHÙ-HỢP-VỚI-MỌI-KHÔNG-GIAN-NỘI-THẤT-i.157222824.3315202784
 
 [thamtretho.com]
-match = -363.6%%
-title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
+match = -354.5%%
+title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an ...
 url = https://thamtretho.com/
 
 [trieuchau.com]
@@ -32,9 +32,9 @@ title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
 url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
 
 [www.lazada.vn]
-match = -136.4%%
-title = BỘ 18 MIẾNG THẢM XỐP VÂN GỖ CAO CẤP
-url = https://www.lazada.vn/products/bo-18-mieng-tham-xop-van-go-cao-cap-18-mieng-tham-nhieu-mau-i377144802.html
+match = -109.1%%
+title = Thảm Xốp Lót Sàn - BỘ gồm 18 MIẾNG
+url = https://www.lazada.vn/products/tham-xop-lot-san-bo-gom-18mieng-i1865380749.html
 
 [tayphuthuan.com]
 match = -154.5%%
@@ -42,9 +42,9 @@ title = Thảm xốp lót sàn nhà bóng cho bé chơi
 url = http://tayphuthuan.com/san-pham/tham-xop-lot-san-nha-778.html
 
 [h5.lazada.vn]
-match = -72.7%%
-title = BỘ 18 MIẾNG Thảm Xốp Lót Sàn
-url = https://h5.lazada.vn/products/bo-18-mieng-tham-xop-lot-san-i378424220-s633274791.html?&search=pdp_v2v?mp=1&scm=1007.16389.286994.0&clickTrackInfo=700b44e4-56c0-4e78-b977-2d879f80942e__378424220__10328__shop__287002__0.7376548__0.7376548__0.0__0.0__0.0__0.7376548__2__null__null__null__null__null__null____440000.0__0.4340909090909091__5.0__6__249000.0__73238,82420,85448,87454,89297,89487,89491,92232,92853,92928,95266,113326,173784,224209,286784,289133,289968,289969,305191,307285,307286,315348,320547,323404,323503__null__null__null__3650.16544_955.3632__null__32104__null__0.0__0.0________null__null__0
+match = -327.3%%
+title = Thảm xốp lót sàn cao cấp 60x60 - Bộ gồm 6-12-18-24-30- ...
+url = https://h5.lazada.vn/products/tham-xop-lot-san-cao-cap-60x60-bo-gom-6-12-18-24-30-36-42-48-mieng-i1886200932.html
 
 [thamtraisangiare.com]
 match = 18.2%%
